# mycrew

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: buildgh.yml
app/: main.py  main_cmd.py  main_flow.py
app/crews/: crew_manager.py
app/crews/blog_crew/: blog_agents.yaml  blog_crew.py  blog_tasks.yaml
app/scripts/: test_pexels_tools.py
app/tools/: image_search_tool.py
crews/: crew_manager.py
